--- a/app/assets/stylesheets/components/_card-forum.scss
+++ b/app/assets/stylesheets/components/_card-forum.scss
@@ -51,7 +51,7 @@
   }
 }
 
-.container {
+.container-forum {
   margin-top: 20px;
 }
 
